--- a/theme/head.hbs
+++ b/theme/head.hbs
@@ -2,4 +2,4 @@
 src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" 
 data-id="wabinab" data-description="Support me on Buy me a coffee!" 
 data-message="Your support is all that counts!" data-color="#FAFAFA" 
-data-position="left" data-x_margin="18" data-y_margin="18"></script>
+data-position="right" data-x_margin="180" data-y_margin="18"></script>
